tooling/nargo_cli/tests/snapshots/execution_failure/fold_nested_brillig_assert_fail/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed
   ┌─ src/main.nr:28:12
   │
28 │     assert(x);
   │            -
   │
   = Call stack:
     1. src/main.nr:5:4
     2. src/main.nr:7:17
     3. src/main.nr:12:5
     4. src/main.nr:19:9
     5. src/main.nr:24:5

Error interpreting main function
