tooling/nargo_cli/tests/snapshots/execution_failure/fold_nested_brillig_assert_fail/execute__tests__fold_nested_brillig_assert_fail_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: This doc comment doesn't document anything
   ┌─ src/main.nr:17:5
   │
17 │     /// Safety: testing context
   │     --------------------------- Consider changing it to a regular `//` comment
   │

warning: Unsafe block must have a safety comment above it
   ┌─ src/main.nr:18:5
   │
18 │     unsafe {
   │     ------ The comment must start with the "Safety: " word
   │

bug: Brillig function call isn't properly covered by a manual constraint
   ┌─ src/main.nr:19:9
   │
19 │         conditional_wrapper(x)
   │         ---------------------- This Brillig call's inputs and its return values haven't been sufficiently constrained. This should be done to prevent potential soundness vulnerabilities
   │
   = Call stack:
     1. src/main.nr:19:9

error: Failed to solve program: 'Failed to solve brillig function'
   ┌─ src/main.nr:28:12
   │
28 │     assert(x);
   │            -
   │
   = Call stack:
     1. src/main.nr:7:17
     2. src/main.nr:12:5
     3. src/main.nr:19:9
     4. src/main.nr:24:5
     5. src/main.nr:28:12

Failed to solve program: 'Failed to solve brillig function'
